<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back_description">Назад</string>
    <string name="toggle_description">Переключатель</string>
    <string name="share_description">Поделиться</string>
    <string name="support_description">Поддержка</string>
    <string name="forward_description">Вперед</string>
    <string name="app_title">Playlist maker</string>
    <string name="track_artwork" translatable="false">Обложка трека</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="share_message" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email" translatable="false">pfpro456@mail.ru</string>
    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="network_error_title" translatable="false">Проблемы со связью</string>
    <string name="network_error_message" translatable="false">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
</resources>
