<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sett"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_settings"
    android:orientation="vertical"
    android:padding="@dimen/padding_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_title"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_marginEnd="@dimen/margin_end_arrow"
            android:contentDescription="@string/back_description"
            android:src="@drawable/back"
            app:tint="@color/arrow_back"/>

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textColor="@color/text_primary"/>

    </LinearLayout>

    <FrameLayout style="@style/SettingsItem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_item"
            android:paddingEnd="@dimen/padding_item">

            <TextView
                style="@style/SettingsItemText"
                android:text="@string/dark_theme"
                android:textColor="@color/text_primary" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_icon" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout style="@style/SettingsItem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_item"
            android:paddingEnd="@dimen/padding_item">

            <TextView
                style="@style/SettingsItemText"
                android:text="@string/share_app"
                android:textColor="@color/text_primary" />

            <ImageView
                style="@style/SettingsItemIcon"
                android:contentDescription="@string/share_description"
                android:src="@drawable/share"
                app:tint="@color/icon_tint_night"/>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout style="@style/SettingsItem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_item"
            android:paddingEnd="@dimen/padding_item">

            <TextView
                style="@style/SettingsItemText"
                android:text="@string/support"
                android:textColor="@color/text_primary" />

            <ImageView
                style="@style/SettingsItemIcon"
                android:contentDescription="@string/support_description"
                android:src="@drawable/support"
                app:tint="@color/icon_tint_night"/>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout style="@style/SettingsItem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_item"
            android:paddingEnd="@dimen/padding_item">

            <TextView
                style="@style/SettingsItemText"
                android:text="@string/user_agreement"
                android:textColor="@color/text_primary" />

            <ImageView
                style="@style/SettingsItemIcon"
                android:contentDescription="@string/forward_description"
                android:src="@drawable/forward"
                app:tint="@color/icon_tint_night"/>

        </LinearLayout>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>