<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:padding="@dimen/padding_default">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title"
        android:text="@string/app_title"
        android:textColor="@color/white"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menuContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_container"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <Button
            android:id="@+id/btnSearch"
            style="@style/MainMenuButton"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/btnMedia"
            style="@style/MainMenuButton"
            android:text="@string/media_library"
            app:icon="@drawable/media" />

        <Button
            android:id="@+id/btnSettings"
            style="@style/MainMenuButton"
            android:text="@string/settings"
            app:icon="@drawable/settings" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>